--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -18,6 +18,7 @@ fs_permissions = [
 
 remappings = [
   "@contracts-bedrock/=lib/optimism/packages/contracts-bedrock/src/",
+  "@contracts-interfaces/=lib/optimism/packages/contracts-bedrock/interfaces/",
   "@solady/=lib/optimism/packages/contracts-bedrock/lib/solady/src/",
   "@openzeppelin/contracts-v5=lib/optimism/packages/contracts-bedrock/lib/openzeppelin-contracts-v5/contracts/",
   "@openzeppelin/contracts/=lib/optimism/packages/contracts-bedrock/lib/openzeppelin-contracts/contracts/",
